# unistellar-data-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/unistellar_downloader/: __init__.py  __main__.py  cli.py
